fix: refactor works03

--- a/src/works03/index.html
+++ b/src/works03/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script src="./index.js" type="module"></script>
+    <link rel="stylesheet" href="../assets/css/reset.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebGL School Task03</title>
+    <title>WebGL Works | 003 | The Universe</title>
     <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
   </head>
   <body>
+    <header class="header">
+      <h1 class="header__title"><span class="header__title__number">003</span>The Universe</h1>
+      <ul class="header__list">
+        <li class="header__item"><a href="https://github.com/taic-dev/webgl-works/tree/main/src/works03" class="header__link" target="_blank" rel="noopener noreferrer">Github</a></li>
+        <li class="header__item"><a href="https://x.com/taic_dev_/status/1698357637342237156" class="header__link" target="_blank" rel="noopener noreferrer">X</a></li>
+      </ul>
+    </header>
     <div id="webgl"></div>
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
