--- a/src/works04/index.html
+++ b/src/works04/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./style.css">
   <script src="./script.js" type="module"></script>
-  <title>WebGL School Practice02</title>
+  <title>WebGL Works | 004 | The Universe</title>
 </head>
 <body>
   <div class="stkr"></div>
