--- a/src/works04/index.html
+++ b/src/works04/index.html
@@ -4,16 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=PT+Serif&family=Secular+One&display=swap');</style>
-  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="../assets/css/reset.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="./style.css">
-  <script src="./script.js" type="module"></script>
-  <title>WebGL Works | 004 | The Universe</title>
+  <title>WebGL Works | 004 | Beautiful Hands</title>
 </head>
 <body>
   <div class="stkr"></div>
   <header class="header">
-    <div class="header__item"><a href="">Menu</a></div>
+    <h1 class="header__title"><span class="header__title__number">004</span>Beautiful Hands</h1>
+    <ul class="header__list">
+      <li class="header__item"><a href="https://github.com/taic-dev/webgl-works/tree/main/src/works04" class="header__link" target="_blank" rel="noopener noreferrer">Github</a></li>
+      <li class="header__item"><a href="https://x.com/taic_dev_/status/1699431278167122168" class="header__link" target="_blank" rel="noopener noreferrer">X</a></li>
+    </ul>
   </header>
   <section class="fv">
     <div class="fv__title">
@@ -22,5 +27,6 @@
     </div>
     <div id="webgl" class="webgl"></div>
   </section>
+  <script src="./script.js" type="module"></script>
 </body>
 </html>
