--- a/src/works05/index.html
+++ b/src/works05/index.html
@@ -4,17 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
-  <link rel="stylesheet" href="./reset.css">
+  <link rel="stylesheet" href="../assets/css/reset.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="./style.css">
-  <script src="./script.js" type="module"></script>
-  <title>WebGL School Practice01</title>
+  <title>WebGL Works | 005 | The Card</title>
+  <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
 </head>
 <body>
+  <header class="header">
+    <h1 class="header__title"><span class="header__title__number">005</span>The Card</h1>
+    <ul class="header__list">
+      <li class="header__item"><a href="https://github.com/taic-dev/webgl-works/tree/main/src/works05" class="header__link" target="_blank" rel="noopener noreferrer">Github</a></li>
+      <li class="header__item"><a href="https://x.com/taic_dev_/status/1701400120376639888" class="header__link" target="_blank" rel="noopener noreferrer">X</a></li>
+    </ul>
+  </header>
   <div id="webgl" class="webgl"></div>
   <div class="fv">
     <h1>The only card in the world for you!!</h1>
   </div>
   <section class="section"></section>
+  <script src="./script.js" type="module"></script>
 </body>
 </html>
