fix: refactor works06

--- a/src/works06/index.html
+++ b/src/works06/index.html
@@ -4,13 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../assets/css/reset.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
   <link rel="stylesheet" href="style.css">
   <title>Gallery Site</title>
 </head>
 <body>
-  <header>
-    <h1>Gallery Site</h1>
+  <header class="header">
+    <h1 class="header__title"><span class="header__title__number">006</span>Gallery Site</h1>
+    <ul class="header__list">
+      <li class="header__item"><a href="https://github.com/taic-dev/webgl-works/tree/main/src/works06" class="header__link" target="_blank" rel="noopener noreferrer">Github</a></li>
+      <li class="header__item"><a href="https://x.com/taic_dev_/status/1702107620117815378" class="header__link" target="_blank" rel="noopener noreferrer">X</a></li>
+    </ul>
   </header>
   <main>
     <div class="main__wrapper">
