fix: refactor works07

--- a/src/works07/index.html
+++ b/src/works07/index.html
@@ -5,13 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
-  <link rel="stylesheet" href="./src/css/reset.css">
+  <link rel="stylesheet" href="../assets/css/reset.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="./src/css/style.css">
-  <title>Moonlight Whispers</title>
+  <title>WebGL Works | 007 | Moonlight Whispers</title>
 </head>
 <body>
+  <header class="header">
+    <h1 class="header__title"><span class="header__title__number">007</span>Moonlight Whispers</h1>
+    <ul class="header__list">
+      <li class="header__item"><a href="https://github.com/taic-dev/webgl-works/tree/main/src/works07" class="header__link" target="_blank" rel="noopener noreferrer">Github</a></li>
+      <li class="header__item"><a href="https://x.com/taic_dev_/status/1702697814688669868" class="header__link" target="_blank" rel="noopener noreferrer">X</a></li>
+    </ul>
+  </header>
   <div class="container">
-    <h1>Moonlight Whispers</h1>
+    <h2>Moonlight Whispers</h2>
     <p>An enchanting tale of lunar exploration, unveiling ancient mysteries and future possibilities, blending science and mystique.</p>
     <button>Read More</button>
   </div>
