--- a/src/works09/index.html
+++ b/src/works09/index.html
@@ -5,12 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
-  <link rel="stylesheet" href="./src/css/reset.css">
+  <link rel="stylesheet" href="../assets/css/reset.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="./src/css/style.css">
-  <title>Particle Image</title>
+  <title>WebGL Works | 009 | Particle Image</title>
 </head>
 <body>
-  <h1>Particle Image</h1>
+  <header class="header">
+    <h1 class="header__title"><span class="header__title__number">008</span>Particle Image</h1>
+    <ul class="header__list">
+      <li class="header__item"><a href="https://github.com/taic-dev/webgl-works/tree/main/src/works08" class="header__link" target="_blank" rel="noopener noreferrer">Github</a></li>
+      <li class="header__item"><a href="https://x.com/taic_dev_/status/1702921019445690674" class="header__link" target="_blank" rel="noopener noreferrer">X</a></li>
+    </ul>
+  </header>
   <div class="webgl"></div>
   <script type="module" src="./src/main.ts"></script>
 </body>
