--- a/src/works14/index.html
+++ b/src/works14/index.html
@@ -5,12 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
-  <link rel="stylesheet" href="./src/css/reset.css">
+  <link rel="stylesheet" href="../assets/css/reset.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="./src/css/style.css">
-  <title>works16</title>
+  <title>WebGL Works | 014 | Webgl Slider</title>
 </head>
 <body>
-  <h1>works16</h1>
+  <header class="header">
+    <h1 class="header__title"><span class="header__title__number">014</span>Webgl Slider</h1>
+    <ul class="header__list">
+      <li class="header__item"><a href="https://github.com/taic-dev/webgl-works/tree/main/src/works14" class="header__link" target="_blank" rel="noopener noreferrer">Github</a></li>
+      <li class="header__item"><a href="https://x.com/taic_dev_/status/1764238254705127623" class="header__link" target="_blank" rel="noopener noreferrer">X</a></li>
+    </ul>
+  </header>
   <div class="webgl"></div>
   <div class="slider-button">
     <button id="prev">Prev</button>／<button id="next">Next</button>
