fix: refactor works15

--- a/src/works15/index.html
+++ b/src/works15/index.html
@@ -36,6 +36,15 @@
             >X</a
           >
         </li>
+        <li class="header__item">
+          <a
+            href="https://zenn.dev/bokoko33/articles/bd6744879af0d5"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >reference</a
+          >
+        </li>
       </ul>
     </header>
     <div class="webgl">
@@ -64,6 +73,9 @@
         </ul>
       </div>
     </div>
+    <footer>
+      
+    </footer>
     <script type="module" src="./src/ts/main.ts"></script>
   </body>
 </html>
