fix: refactor works16

--- a/src/works16/index.html
+++ b/src/works16/index.html
@@ -7,12 +7,37 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
     </style>
-    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works17</title>
+    <title>WebGL Works | 016 | Wave Transition Images</title>
   </head>
   <body id="root">
-    <h1>works18</h1>
+    <header class="header">
+      <h1 class="header__title">
+        <span class="header__title__number">016</span>Wave Transition Images
+      </h1>
+      <ul class="header__list">
+        <li class="header__item">
+          <a
+            href="https://github.com/taic-dev/webgl-works/tree/main/src/works16"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Github</a
+          >
+        </li>
+        <li class="header__item">
+          <a
+            href="https://x.com/taic_dev_/status/1772650187338764749"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >X</a
+          >
+        </li>
+      </ul>
+    </header>
     <div class="webgl"></div>
     <div class="container">
       <div class="title">
