fix: refactor works19

--- a/src/works19/index.html
+++ b/src/works19/index.html
@@ -6,20 +6,45 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
     </style>
-    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works21</title>
+    <title>WebGL Works | 019 | Fake Movie!!!!!!!!!!</title>
   </head>
   <body>
-    <h1>works21</h1>
+    <header class="header">
+      <h1 class="header__title">
+        <span class="header__title__number">019</span>Fake Movie!!!!!!!!!!
+      </h1>
+      <ul class="header__list">
+        <li class="header__item">
+          <a
+            href="https://github.com/taic-dev/webgl-works/tree/main/src/works19"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Github</a
+          >
+        </li>
+        <li class="header__item">
+          <a
+            href="https://x.com/taic_dev_/status/1784531873039102146"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >X</a
+          >
+        </li>
+      </ul>
+    </header>
     <div class="webgl"></div>
     <main>
       <section class="wrapper">
         <div class="title">
           <h2>Fake Movie!!!!!!!!!!</h2>
         </div>
-        <ul class="list">
-          <li class="item" data-list-no="1">
+        <ul class="movie-list">
+          <li class="movie-item" data-list-no="1">
             <div class="item-text movie-title">
               <p>Echoes of Eternity</p>
               <span>Sebastian Grey</span>
@@ -31,7 +56,7 @@
               />
             </video>
           </li>
-          <li class="item" data-list-no="2">
+          <li class="movie-item" data-list-no="2">
             <div class="item-text movie-title">
               <p>Whispers in the Wind</p>
               <span>Isabella Moon</span>
@@ -43,7 +68,7 @@
               />
             </video>
           </li>
-          <li class="item" data-list-no="3">
+          <li class="movie-item" data-list-no="3">
             <div class="item-text movie-title">
               <p>Shadow's Embrace</p>
               <span>Gabriel Steele</span>
@@ -52,7 +77,7 @@
               <source src="./src/movie/Shadows_Embrace.mp4" type="video/mp4;" />
             </video>
           </li>
-          <li class="item" data-list-no="4">
+          <li class="movie-item" data-list-no="4">
             <div class="item-text movie-title">
               <p>Silent Serenade</p>
               <span>Evelyn Cross</span>
@@ -61,7 +86,7 @@
               <source src="./src/movie/Silent_Serenade.mp4" type="video/mp4;" />
             </video>
           </li>
-          <li class="item" data-list-no="5">
+          <li class="movie-item" data-list-no="5">
             <div class="item-text movie-title">
               <p>Eternal Reverie</p>
               <span>Amelia Rivers</span>
