fix: refactor works22

--- a/src/works22/index.html
+++ b/src/works22/index.html
@@ -6,74 +6,99 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
     </style>
-    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works24</title>
+    <title>WebGL Works | 022 | Infinite Scroooooll 👀</title>
   </head>
   <body>
-    <h1>works24</h1>
+    <header class="header">
+      <h1 class="header__title">
+        <span class="header__title__number">022</span>Infinite Scroooooll 👀
+      </h1>
+      <ul class="header__list">
+        <li class="header__item">
+          <a
+            href="https://github.com/taic-dev/webgl-works/tree/main/src/works22"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Github</a
+          >
+        </li>
+        <li class="header__item">
+          <a
+            href="https://x.com/taic_dev_/status/1799103929751674888"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >X</a
+          >
+        </li>
+      </ul>
+    </header>
     <main>
       <div class="webgl"></div>
-      <ul class="list">
-        <li class="item">
-          <div class="item__img"></div>
+      <ul class="image-list">
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
-        <li class="item">
-          <div class="item__img"></div>
+        <li class="image-item">
+          <div class="image-item__img"></div>
         </li>
       </ul>
     </main>
