fix: refactor works23

--- a/src/works22/index.html
+++ b/src/works22/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="../assets/css/reset.css" />
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>WebGL Works | 022 | Infinite Scroooooll 👀</title>
+    <title>WebGL Works | 022 | Infinite Scroooooll</title>
   </head>
   <body>
     <header class="header">
       <h1 class="header__title">
-        <span class="header__title__number">022</span>Infinite Scroooooll 👀
+        <span class="header__title__number">022</span>Infinite Scroooooll
       </h1>
       <ul class="header__list">
         <li class="header__item">
