--- a/src/works26/index.html
+++ b/src/works26/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
-  <link rel="stylesheet" href="../assets/css/reset.css">
-  <link rel="stylesheet" href="../assets/css/style.css">
-  <link rel="stylesheet" href="./src/css/style.css">
-  <title>WebGL Works | 033 | GLSL</title>
-</head>
-<body>
-  <header class="header">
-    <h1 class="header__title"><span class="header__title__number">033</span>GLSL</h1>
-    <ul class="header__list">
-      <li class="header__item"><a href="https://x.com/taic_dev_/status/1844774151631905058" class="header__link" target="_blank" rel="noopener noreferrer">X</a></li>
-    </ul>
-  </header>
-  <div class="webgl"></div>
-  </main>
-  <script type="module" src="./src/main.ts"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
+    </style>
+    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
+    <title>works28</title>
+  </head>
+  <body>
+    <h1>Fake 3D</h1>
+    <main>
+      <div class="webgl"></div>
+      <div class="image__wrapper">
+        <img src="./src/image/mountain.png" alt="" class="image">
+      </div>
+    </main>
+    <script type="module" src="./src/ts/main.ts"></script>
+  </body>
 </html>
