--- a/src/works25/index.html
+++ b/src/works25/index.html
@@ -8,15 +8,12 @@
     </style>
     <link rel="stylesheet" href="./src/css/reset.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works28</title>
+    <title>works27</title>
   </head>
   <body>
-    <h1>Fake 3D</h1>
+    <h1>Liquid Effect</h1>
     <main>
       <div class="webgl"></div>
-      <div class="image__wrapper">
-        <img src="./src/image/mountain.png" alt="" class="image">
-      </div>
     </main>
     <script type="module" src="./src/ts/main.ts"></script>
   </body>
