fix: refactor works24

--- a/src/works24/index.html
+++ b/src/works24/index.html
@@ -8,13 +8,32 @@
   <link rel="stylesheet" href="../assets/css/reset.css">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="./src/css/style.css">
-  <title>WebGL Works | 033 | GLSL</title>
+  <title>WebGL Works | 024 | Cyclone</title>
 </head>
 <body>
   <header class="header">
-    <h1 class="header__title"><span class="header__title__number">033</span>GLSL</h1>
+    <h1 class="header__title">
+      <span class="header__title__number">024</span>Cyclone
+    </h1>
     <ul class="header__list">
-      <li class="header__item"><a href="https://x.com/taic_dev_/status/1844774151631905058" class="header__link" target="_blank" rel="noopener noreferrer">X</a></li>
+      <li class="header__item">
+        <a
+          href="https://github.com/taic-dev/webgl-works/tree/main/src/works24"
+          class="header__link"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Github</a
+        >
+      </li>
+      <li class="header__item">
+        <a
+          href="https://x.com/taic_dev_/status/1844774151631905058"
+          class="header__link"
+          target="_blank"
+          rel="noopener noreferrer"
+          >X</a
+        >
+      </li>
     </ul>
   </header>
   <div class="webgl"></div>
