--- a/src/works27/index.html
+++ b/src/works27/index.html
@@ -6,14 +6,37 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
     </style>
-    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>works29</title>
+    <title>WebGL Works | 027 | KI-OKU</title>
   </head>
   <body>
-    <div class="title__wrapper">
-      <h1>KI-OKU</h1>
-    </div>
+    <header class="header">
+      <h1 class="header__title">
+        <span class="header__title__number">027</span>KI-OKU
+      </h1>
+      <ul class="header__list">
+        <li class="header__item">
+          <a
+            href="https://github.com/taic-dev/webgl-works/tree/main/src/works27"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Github</a
+          >
+        </li>
+        <li class="header__item">
+          <a
+            href="https://x.com/taic_dev_/status/1868255632404668787"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >X</a
+          >
+        </li>
+      </ul>
+    </header>
     <div class="webgl"></div>
     <main>
       <div class="effect"></div>
