--- a/src/works28/index.html
+++ b/src/works28/index.html
@@ -6,12 +6,37 @@
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
     </style>
-    <link rel="stylesheet" href="./src/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>Mahjong!!</title>
+    <title>WebGL Works | 028 | Mahjong!!</title>
   </head>
   <body>
-    <h1>Mahjong!!</h1>
+    <header class="header">
+      <h1 class="header__title">
+        <span class="header__title__number">028</span>Mahjong!!
+      </h1>
+      <ul class="header__list">
+        <li class="header__item">
+          <a
+            href="https://github.com/taic-dev/webgl-works/tree/main/src/works28"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Github</a
+          >
+        </li>
+        <li class="header__item">
+          <a
+            href="#"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >X</a
+          >
+        </li>
+      </ul>
+    </header>
     <main>
       <div class="webgl"></div>
       <ul class="button-list">
