--- a/src/index.html
+++ b/src/index.html
@@ -6,151 +6,188 @@
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebGL works</title>
+    <title>WebGL Works | HOME</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap");
     </style>
   </head>
   <body>
     <div class="wrapper">
-      <h1>WebGL works</h1>
+      <div class="mv">
+        <div class="mv__desc">
+          <h1 class="mv__title">WebGL Works</h1>
+          <p class="mv__text">WebGLの制作物をまとめたサイトです。<br>このサイトでは、私が試行錯誤しながら取り組んだWebGLの作品や、技術的なチャレンジの成果を記録しています。</p>
+        </div>
+        <ul class="mv__list">
+          <li class="mv__item"><a href="https://github.com/taic-dev" class="mv__link" target="_blank" rel="noopener noreferrer">Github</a></li>
+          <li class="mv__item"><a href="https://x.com/taic_dev_" class="mv__link" target="_blank" rel="noopener noreferrer">X</a></li>
+        </ul>
+      </div>
       <ul class="list">
         <li class="item">
+          <span class="item-number">028</span>
           <a class="item-link" href="works28/index.html">
             <img class="item-image" src="./assets/images/works28.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">027</span>
           <a class="item-link" href="works27/index.html">
             <img class="item-image" src="./assets/images/works27.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">026</span>
           <a class="item-link" href="works26/index.html">
             <img class="item-image" src="./assets/images/works26.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">025</span>
           <a class="item-link" href="works25/index.html">
             <img class="item-image" src="./assets/images/works25.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">024</span>
           <a class="item-link" href="works24/index.html">
             <img class="item-image" src="./assets/images/works24.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">023</span>
           <a class="item-link" href="works23/index.html">
             <img class="item-image" src="./assets/images/works23.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">022</span>
           <a class="item-link" href="works22/index.html">
             <img class="item-image" src="./assets/images/works22.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">021</span>
           <a class="item-link" href="works21/index.html">
             <img class="item-image" src="./assets/images/works21.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">020</span>
           <a class="item-link" href="works20/index.html">
             <img class="item-image" src="./assets/images/works20.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">019</span>
           <a class="item-link" href="works19/index.html">
             <img class="item-image" src="./assets/images/works19.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">018</span>
           <a class="item-link" href="works18/index.html">
             <img class="item-image" src="./assets/images/works18.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">017</span>
           <a class="item-link" href="works17/index.html">
             <img class="item-image" src="./assets/images/works17.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">016</span>
           <a class="item-link" href="works16/index.html">
             <img class="item-image" src="./assets/images/works16.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">015</span>
           <a class="item-link" href="works15/index.html">
             <img class="item-image" src="./assets/images/works15.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">014</span>
           <a class="item-link" href="works14/index.html">
             <img class="item-image" src="./assets/images/works14.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">013</span>
           <a class="item-link" href="works13/index.html">
             <img class="item-image" src="./assets/images/works13.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">012</span>
           <a class="item-link" href="works12/index.html">
             <img class="item-image" src="./assets/images/works12.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">011</span>
           <a class="item-link" href="works11/index.html">
             <img class="item-image" src="./assets/images/works11.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">010</span>
           <a class="item-link" href="works10/index.html">
             <img class="item-image" src="./assets/images/works10.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">009</span>
           <a class="item-link" href="works09/index.html">
             <img class="item-image" src="./assets/images/works09.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">008</span>
           <a class="item-link" href="works08/index.html">
             <img class="item-image" src="./assets/images/works08.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">007</span>
           <a class="item-link" href="works07/index.html">
             <img class="item-image" src="./assets/images/works07.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">006</span>
           <a class="item-link" href="works06/index.html">
             <img class="item-image" src="./assets/images/works06.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">005</span>
           <a class="item-link" href="works05/index.html">
             <img class="item-image" src="./assets/images/works05.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">004</span>
           <a class="item-link" href="works04/index.html">
             <img class="item-image" src="./assets/images/works04.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">003</span>
           <a class="item-link" href="works03/index.html">
             <img class="item-image" src="./assets/images/works03.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">002</span>
           <a class="item-link" href="works02/index.html">
             <img class="item-image" src="./assets/images/works02.png" alt="">
           </a>
         </li>
         <li class="item">
+          <span class="item-number">001</span>
           <a class="item-link" href="works01/index.html">
             <img class="item-image" src="./assets/images/works01.png" alt="">
           </a>
