--- a/src/works10/index.html
+++ b/src/works10/index.html
@@ -16,6 +16,7 @@
     <ul class="header__list">
       <li class="header__item"><a href="https://github.com/taic-dev/webgl-works/tree/main/src/works10" class="header__link" target="_blank" rel="noopener noreferrer">Github</a></li>
       <li class="header__item"><a href="https://x.com/taic_dev_/status/1715677912513618092" class="header__link" target="_blank" rel="noopener noreferrer">X</a></li>
+      <li class="header__item"><a href="https://www.youtube.com/watch?v=qmRqgFbNprM&t=3127s" class="header__link" target="_blank" rel="noopener noreferrer">reference</a></li>
     </ul>
   </header>
   <div class="webgl"></div>
