--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
             <img class="item-image" src="./assets/images/works27.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">026</span>
           <a class="item-link" href="works26/index.html">
             <img class="item-image" src="./assets/images/works26.png" alt="">
@@ -54,19 +54,19 @@
             <img class="item-image" src="./assets/images/works24.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">023</span>
           <a class="item-link" href="works23/index.html">
             <img class="item-image" src="./assets/images/works23.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">022</span>
           <a class="item-link" href="works22/index.html">
             <img class="item-image" src="./assets/images/works22.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">021</span>
           <a class="item-link" href="works21/index.html">
             <img class="item-image" src="./assets/images/works21.png" alt="">
@@ -78,7 +78,7 @@
             <img class="item-image" src="./assets/images/works20.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">019</span>
           <a class="item-link" href="works19/index.html">
             <img class="item-image" src="./assets/images/works19.png" alt="">
@@ -114,7 +114,7 @@
             <img class="item-image" src="./assets/images/works14.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">013</span>
           <a class="item-link" href="works13/index.html">
             <img class="item-image" src="./assets/images/works13.png" alt="">
@@ -132,31 +132,31 @@
             <img class="item-image" src="./assets/images/works11.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">010</span>
           <a class="item-link" href="works10/index.html">
             <img class="item-image" src="./assets/images/works10.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">009</span>
           <a class="item-link" href="works09/index.html">
             <img class="item-image" src="./assets/images/works09.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">008</span>
           <a class="item-link" href="works08/index.html">
             <img class="item-image" src="./assets/images/works08.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">007</span>
           <a class="item-link" href="works07/index.html">
             <img class="item-image" src="./assets/images/works07.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">006</span>
           <a class="item-link" href="works06/index.html">
             <img class="item-image" src="./assets/images/works06.png" alt="">
@@ -168,7 +168,7 @@
             <img class="item-image" src="./assets/images/works05.png" alt="">
           </a>
         </li>
-        <li class="item">
+        <li class="item --pc-only">
           <span class="item-number">004</span>
           <a class="item-link" href="works04/index.html">
             <img class="item-image" src="./assets/images/works04.png" alt="">
