--- a/src/works29/index.html
+++ b/src/works29/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="../assets/css/reset.css" />
     <link rel="stylesheet" href="../assets/css/style.css" />
     <link rel="stylesheet" href="./src/css/style.css" />
-    <title>WebGL Works | 029 | KI-OKU</title>
+    <title>WebGL Works | 029 | monopo.vn</title>
   </head>
   <body>
     <header class="header">
       <h1 class="header__title">
-        <span class="header__title__number">029</span>KI-OKU
+        <span class="header__title__number">029</span>monopo.vn
       </h1>
       <ul class="header__list">
         <li class="header__item">
@@ -33,6 +33,15 @@
             target="_blank"
             rel="noopener noreferrer"
             >X</a
+          >
+        </li>
+        <li class="header__item">
+          <a
+            href="https://www.youtube.com/watch?v=sPBb-0al7Y0&t=2s"
+            class="header__link"
+            target="_blank"
+            rel="noopener noreferrer"
+            >reference</a
           >
         </li>
       </ul>
