--- a/src/works29/index.html
+++ b/src/works29/index.html
@@ -28,7 +28,7 @@
         </li>
         <li class="header__item">
           <a
-            href="#"
+            href="https://x.com/taic_dev_/status/1880588514183750050"
             class="header__link"
             target="_blank"
             rel="noopener noreferrer"
