add: works30 base

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,12 @@
       </div>
       <ul class="list">
         <li class="item">
+          <span class="item-number">030</span>
+          <a class="item-link" href="works30/index.html">
+            <img class="item-image" src="./assets/images/works30.png" alt="">
+          </a>
+        </li>
+        <li class="item">
           <span class="item-number">029</span>
           <a class="item-link" href="works29/index.html">
             <img class="item-image" src="./assets/images/works29.png" alt="">
