add: works30 base

--- a/src/works30/index.html
+++ b/src/works30/index.html
@@ -5,13 +5,47 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;600&family=Secular+One&display=swap');</style>
-  <link rel="stylesheet" href="./assets/css/reset.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  <title>threejs-ts-starter</title>
+  <link rel="stylesheet" href="../assets/css/reset.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="./src/css/style.css" />
+  <title>WebGL Works | 030 | monopo saigon</title>
 </head>
 <body>
+  <header class="header">
+    <h1 class="header__title">
+      <span class="header__title__number">030</span>AAA
+    </h1>
+    <ul class="header__list">
+      <li class="header__item">
+        <a
+          href="https://github.com/taic-dev/webgl-works/tree/main/src/works30"
+          class="header__link"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Github</a
+        >
+      </li>
+      <li class="header__item">
+        <a
+          href=""
+          class="header__link"
+          target="_blank"
+          rel="noopener noreferrer"
+          >X</a
+        >
+      </li>
+      <li class="header__item">
+        <a
+          href=""
+          class="header__link"
+          target="_blank"
+          rel="noopener noreferrer"
+          >reference</a
+        >
+      </li>
+    </ul>
+  </header>
   <div class="webgl"></div>
-  <header><h1>three-starter</h1></header>
   <main>
     <div class="mv">
       <div class="mv__desc">
@@ -33,6 +67,6 @@
       <li class="item"><img class="item__image js-item-image" src="./assets/images/list5.jpg" alt=""></li>
     </ul>
   </main>
-  <script type="module" src="./assets/ts/app.ts"></script>
+  <script type="module" src="./src/ts/app.ts"></script>
 </body>
 </html>
