--- a/src/works30/index.html
+++ b/src/works30/index.html
@@ -47,25 +47,7 @@
   </header>
   <div class="webgl"></div>
   <main>
-    <div class="mv">
-      <div class="mv__desc">
-        <h2 class="mv__title">three-starter</h2>
-        <p class="mv__text">
-          <span>This is a development template for Three.js.</span>
-          <span>The development environment uses Vite, TypeScript, and Three.js.</span>
-          <span>It is designed to support the efficient development of 3D applications.</span>
-      </div>
-      <div class="mv__slider">
-        <img class="mv__image js-mv-image" src="./assets/images/mv.jpg" alt="">
-      </div>
-    </div>
-    <ul class="list">
-      <li class="item"><img class="item__image js-item-image" src="./assets/images/list1.jpg" alt=""></li>
-      <li class="item"><img class="item__image js-item-image" src="./assets/images/list2.jpg" alt=""></li>
-      <li class="item"><img class="item__image js-item-image" src="./assets/images/list3.jpg" alt=""></li>
-      <li class="item"><img class="item__image js-item-image" src="./assets/images/list4.jpg" alt=""></li>
-      <li class="item"><img class="item__image js-item-image" src="./assets/images/list5.jpg" alt=""></li>
-    </ul>
+    <div class="mv js-mv"></div>
   </main>
   <script type="module" src="./src/ts/app.ts"></script>
 </body>
