add: works30 thickness

--- a/src/works30/index.html
+++ b/src/works30/index.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="../assets/css/reset.css">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="./src/css/style.css" />
-  <title>WebGL Works | 030 | monopo saigon</title>
+  <title>WebGL Works | 030 | Lens Refraction</title>
 </head>
 <body>
   <header class="header">
     <h1 class="header__title">
-      <span class="header__title__number">030</span>AAA
+      <span class="header__title__number">030</span>Lens Refraction
     </h1>
     <ul class="header__list">
       <li class="header__item">
@@ -47,7 +47,9 @@
   </header>
   <div class="webgl"></div>
   <main>
-    <div class="mv js-mv"></div>
+    <div class="mv js-mv">
+      <h2 class="mv__title">WebGL<br>Lens Refraction</h2>
+    </div>
   </main>
   <script type="module" src="./src/ts/app.ts"></script>
 </body>
